kubernetes/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: research-cloud-api

spec:
  replicas: 3

  selector:
    matchLabels:
      app: research-cloud-api

  template:
    metadata:
      labels:
        app: research-cloud-api

    spec:
      serviceAccountName: research-cloud-api
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: api
          image: research-cloud-api:local
          imagePullPolicy: Never
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 10001
            runAsGroup: 10001
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL

          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          ports:
            - containerPort: 8000

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 2
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10
