kubernetes/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: research-cloud-api

spec:
  selector:
    app: research-cloud-api

  ports:
    - port: 8000
      targetPort: 8000

  type: ClusterIP
